--- a/Product Packaging.Rmd
+++ b/Product Packaging.Rmd
@@ -1,14 +1,13 @@
 ---
 title: '**Project Machine Learning for Retail: Product Packaging**'
-author: "Author: Fitria Dwi Wulandari (wulan391@sci.ui.ac.id) - September 21, 2021."
-output:
-  html_document: default
+author: "**Author: Fitria Dwi Wulandari (wulan391@sci.ui.ac.id) - September 21, 2021.**"
+output: github_document
 ---
-***
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-
+***
 ##### **Problems**: 
 1. More competitors.
 1. There are still many products that are in abundant stock.
@@ -33,9 +32,9 @@ library(arules)
 ```
 ##### **Import Dataset**
 
-**dataset**: 
-- transaction data for 3 months 
-- consisting of 2 variables (transaction code, product name)
+
+* Transaction data for 3 months. 
+* Consisting of 2 variables (transaction code, product name).
 
 ```{r}
 transaksi_retail <- read.transactions(file="https://storage.googleapis.com/dqlab-dataset/transaksi_dqlab_retail.tsv", format="single", sep="\t", cols=c(1,2), skip=1)
